--- a/index.html
+++ b/index.html
@@ -633,6 +633,25 @@
                     <a href="day 17/day17_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
+
+            <!-- Day 18 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 18</div>
+                <h3 class="day-title">Deploy to GitHub Pages</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Exam Review from Day 15</li>
+                        <li>Vocab Review: Streaming & Algorithm</li>
+                        <li>New Terms: URL & Repository</li>
+                        <li>GitHub Pages Deployment Tutorial</li>
+                        <li>Game Development Work Time</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 18/day18_slides.html" class="material-link">Interactive Slides</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -967,6 +986,23 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Algorithm</div>
                         <div class="vocab-definition">A step-by-step set of instructions or rules designed to solve a specific problem or perform a specific task. Think of a recipe - it's step-by-step instructions to make a cake. In computing, algorithms power everything from your social media feed (TikTok/Instagram algorithms) to Google search results to Netflix recommendations.</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-18">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-18')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 18: Deploy to GitHub Pages
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Phishing</div>
+                        <div class="vocab-definition">A type of online scam where criminals send fake emails, texts, or messages pretending to be from legitimate companies to trick you into giving away passwords, credit card numbers, or personal information. Like someone wearing a fake UPS uniform asking for your house keys - they're pretending to be trustworthy to steal from you! Watch for red flags: spelling errors, generic greetings ("Dear Customer"), threats of account closure, and requests for passwords.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Malware</div>
+                        <div class="vocab-definition">Malicious software designed to damage, disrupt, or steal data from your computer, phone, or network. The umbrella term for all bad software including viruses (spread to other files), ransomware (locks your files for payment), spyware (steals passwords), trojans (pretends to be legit), and bots (takes control of your device). Think of it as digital germs or pests that infect your device!</div>
                     </div>
                 </div>
             </div>
