--- a/index.html
+++ b/index.html
@@ -637,19 +637,36 @@
             <!-- Day 18 -->
             <div class="day-card completed">
                 <div class="day-number">Day 18</div>
-                <h3 class="day-title">Deploy to GitHub Pages</h3>
+                <h3 class="day-title">Cybersecurity Basics</h3>
                 <div class="day-topics">
                     <ul>
-                        <li>Exam Review from Day 15</li>
                         <li>Vocab Review: Streaming & Algorithm</li>
-                        <li>New Terms: URL & Repository</li>
-                        <li>GitHub Pages Deployment Tutorial</li>
+                        <li>New Terms: Phishing & Malware</li>
                         <li>Game Development Work Time</li>
                     </ul>
                 </div>
                 <div class="materials-section">
                     <p class="materials-title">Materials:</p>
                     <a href="day 18/day18_slides.html" class="material-link">Interactive Slides</a>
+                </div>
+            </div>
+
+            <!-- Day 19 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 19</div>
+                <h3 class="day-title">Tech Vocabulary Day</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Vocab Review: Phishing & Malware</li>
+                        <li>Test Review from Last Week</li>
+                        <li>New Terms: Emoji vs Emoticon & Bug</li>
+                        <li>Computer History: The First Bug Story</li>
+                        <li>Game Development Work Time</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 19/day19_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
         </div>
@@ -993,7 +1010,7 @@
             <div class="vocab-day collapsed" id="vocab-day-18">
                 <div class="vocab-day-title" onclick="toggleVocab('vocab-day-18')">
                     <span class="vocab-toggle">▼</span>
-                    Day 18: Deploy to GitHub Pages
+                    Day 18: Cybersecurity Basics
                 </div>
                 <div class="vocab-content">
                     <div class="vocab-term-item">
@@ -1003,6 +1020,27 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Malware</div>
                         <div class="vocab-definition">Malicious software designed to damage, disrupt, or steal data from your computer, phone, or network. The umbrella term for all bad software including viruses (spread to other files), ransomware (locks your files for payment), spyware (steals passwords), trojans (pretends to be legit), and bots (takes control of your device). Think of it as digital germs or pests that infect your device!</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-19">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-19')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 19: Tech Vocabulary Day
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Emoji</div>
+                        <div class="vocab-definition">Actual small digital images/icons used to express emotions or ideas (😂 🔥 💯). Created in Japan in the late 1990s. "Emoji" comes from Japanese: "e" (picture) + "moji" (character). Built into your device's keyboard with thousands available!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Emoticon</div>
+                        <div class="vocab-definition">Text-based symbols made from keyboard characters to show emotions like :-) :( ;-) :P ^_^ ¯\_(ツ)_/¯. First used in 1982 by Scott Fahlman in an email. "Emoticon" = "emotion + icon." You type them with regular keyboard keys - tilt your head left to see the face!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Bug</div>
+                        <div class="vocab-definition">An error, flaw, or fault in software or hardware that causes incorrect or unexpected results. The term dates back to Thomas Edison in the 1870s, but became famous in 1947 when engineers found an actual moth stuck in the Harvard Mark II computer! They taped it in their logbook with the note "First actual case of bug being found." "Debugging" means finding and fixing these problems.</div>
                     </div>
                 </div>
             </div>
