--- a/index.html
+++ b/index.html
@@ -669,6 +669,26 @@
                     <a href="day 19/day19_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
+
+            <!-- Day 21 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 21</div>
+                <h3 class="day-title">AI Image Generation</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>New Terms: Sprite & Generative AI</li>
+                        <li>What is AI Image Generation?</li>
+                        <li>Free Tools: Bing, Leonardo.ai, Craiyon, Adobe Firefly</li>
+                        <li>Premium Options: Midjourney, DALL-E 3</li>
+                        <li>Creating Logos, Game Sprites & Artwork</li>
+                        <li>Prompt Engineering for Images</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 21/day21_slides.html" class="material-link">Interactive Slides</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -1041,6 +1061,23 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Bug</div>
                         <div class="vocab-definition">An error, flaw, or fault in software or hardware that causes incorrect or unexpected results. The term dates back to Thomas Edison in the 1870s, but became famous in 1947 when engineers found an actual moth stuck in the Harvard Mark II computer! They taped it in their logbook with the note "First actual case of bug being found." "Debugging" means finding and fixing these problems.</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-21">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-21')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 21: AI Image Generation
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Sprite</div>
+                        <div class="vocab-definition">A 2D image or animation integrated into a larger scene, most commonly used in video games. Sprites represent characters, items, enemies, power-ups, and effects. Think of every character in old-school games like Super Mario, Pokemon, or Stardew Valley - those are all sprites! They're usually smaller images (32x32, 64x64, 128x128 pixels) designed to move around the screen and interact with each other. Modern games still use sprites, especially for 2D games and mobile games.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Generative AI</div>
+                        <div class="vocab-definition">Artificial Intelligence that creates brand new, original content rather than just analyzing or organizing existing information. Generative AI can produce images, text, music, videos, code, and more by learning patterns from millions of examples during training. Key difference: Regular AI recognizes and analyzes (like Siri understanding "set alarm"). Generative AI creates new things that never existed before. Examples you use: ChatGPT (text), DALL-E/Midjourney (images), GitHub Copilot (code), Suno (music).</div>
                     </div>
                 </div>
             </div>
