--- a/index.html
+++ b/index.html
@@ -689,6 +689,26 @@
                     <a href="day 21/day21_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
+
+            <!-- Day 22 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 22</div>
+                <h3 class="day-title">Web Logo Design Challenge</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Vocab Review: Sprite & Generative AI</li>
+                        <li>New Terms: Branding & Vector Graphics</li>
+                        <li>Professional AI Logo Prompting</li>
+                        <li>Web-Ready Logo Requirements</li>
+                        <li>Grillzilla BBQ Website Logo (15 min)</li>
+                        <li>Tool Discovery & Anonymous Competition</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 22/day22_slides.html" class="material-link">Interactive Slides</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -1078,6 +1098,23 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Generative AI</div>
                         <div class="vocab-definition">Artificial Intelligence that creates brand new, original content rather than just analyzing or organizing existing information. Generative AI can produce images, text, music, videos, code, and more by learning patterns from millions of examples during training. Key difference: Regular AI recognizes and analyzes (like Siri understanding "set alarm"). Generative AI creates new things that never existed before. Examples you use: ChatGPT (text), DALL-E/Midjourney (images), GitHub Copilot (code), Suno (music).</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-22">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-22')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 22: Logo Design Challenge
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Branding</div>
+                        <div class="vocab-definition">The process of creating a unique identity for a business, product, or person that makes them recognizable and memorable. Branding includes the name, logo, colors, fonts, messaging, and overall "personality" that represents what the business stands for. Think of it like your personal style and reputation, but for a company! Good branding: When you see the golden arches, you think McDonald's. When you see a swoosh, you think Nike. Your logo is the face of your brand.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Vector Graphics</div>
+                        <div class="vocab-definition">Images created using mathematical formulas and geometric shapes (points, lines, curves) rather than pixels. Vector graphics can be scaled to ANY size - from business card to billboard - without losing quality or getting blurry. They stay crisp and sharp no matter how much you zoom in! Vector (made of math, infinitely scalable, perfect for logos) vs Raster/Pixel (made of colored dots, gets blurry when enlarged, good for photos). Common vector formats: .svg, .ai, .eps. Professional logos are always created as vectors first.</div>
                     </div>
                 </div>
             </div>
