--- a/day 22/day22_slides.html
+++ b/day 22/day22_slides.html
@@ -518,7 +518,7 @@
 
             <div style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; padding: 40px; border-radius: 15px; text-align: center; margin: 30px 0; border: 5px solid #4c3a9b;">
                 <p style="font-size: 1.8em; margin-bottom: 15px; font-weight: bold;">📤 SUBMIT YOUR LOGO HERE:</p>
-                <a href="http://bit.ly/4nSUkWA" target="_blank" style="color: #ffd89b; font-size: 2.5em; font-weight: bold; text-decoration: underline; display: block; margin: 20px 0;">http://bit.ly/4nSUkWA</a>
+                <a href="bit.ly/4nSUkWA" target="_blank" style="color: #ffd89b; font-size: 2.5em; font-weight: bold; text-decoration: underline; display: block; margin: 20px 0;">http://bit.ly/4nSUkWA</a>
                 <p style="font-size: 1.3em; margin-top: 15px;">⏱️ You have 15 minutes • Submit anonymously!</p>
             </div>
 
