--- a/index.html
+++ b/index.html
@@ -709,6 +709,27 @@
                     <a href="day 22/day22_slides.html" class="material-link">Interactive Slides</a>
                 </div>
             </div>
+
+            <!-- Day 23 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 23</div>
+                <h3 class="day-title">Machine Learning & Teachable Machine</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>New Terms: Machine Learning & Training Data</li>
+                        <li>How ML Works: Training, Testing, Prediction</li>
+                        <li>Real-World Examples: TikTok, Spotify, Snapchat</li>
+                        <li>Introduction to Teachable Machine</li>
+                        <li>Rock Paper Scissors AI Project</li>
+                        <li>Understanding AI Limitations</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 23/day23_slides.html" class="material-link">Interactive Slides</a>
+                    <a href="https://teachablemachine.withgoogle.com" class="material-link secondary" target="_blank">Teachable Machine</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -1115,6 +1136,23 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Vector Graphics</div>
                         <div class="vocab-definition">Images created using mathematical formulas and geometric shapes (points, lines, curves) rather than pixels. Vector graphics can be scaled to ANY size - from business card to billboard - without losing quality or getting blurry. They stay crisp and sharp no matter how much you zoom in! Vector (made of math, infinitely scalable, perfect for logos) vs Raster/Pixel (made of colored dots, gets blurry when enlarged, good for photos). Common vector formats: .svg, .ai, .eps. Professional logos are always created as vectors first.</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-23">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-23')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 23: Machine Learning & Teachable Machine
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Machine Learning</div>
+                        <div class="vocab-definition">When computers learn from examples instead of being explicitly programmed with rules. Instead of telling a computer "if the image has pointy ears and whiskers, it's a cat," you show it 1,000 pictures of cats and 1,000 pictures of dogs, and it figures out the difference on its own. TikTok's algorithm learns what videos YOU like by watching what you watch, like, and skip. It doesn't have rules like "show everyone dance videos" - it learns YOUR preferences!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Training Data</div>
+                        <div class="vocab-definition">The collection of examples you use to teach a machine learning model what to recognize. Training data is like flashcards - if you want to learn Spanish, you need lots of example words and phrases. If you want AI to recognize your face, you need lots of pictures of your face from different angles. The more examples (and more varied) your training data is, the smarter your AI becomes. Bad training data = bad AI!</div>
                     </div>
                 </div>
             </div>
