--- a/index.html
+++ b/index.html
@@ -730,6 +730,27 @@
                     <a href="https://teachablemachine.withgoogle.com" class="material-link secondary" target="_blank">Teachable Machine</a>
                 </div>
             </div>
+
+            <!-- Day 24 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 24</div>
+                <h3 class="day-title">Game Showcase & Video Editing Preview</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Review: Machine Learning & Training Data</li>
+                        <li>Build Your Game with AI - Showcase</li>
+                        <li>Introduction to Video Editing</li>
+                        <li>ClipChamp (Windows Built-in)</li>
+                        <li>CapCut (Free, TikTok-style)</li>
+                        <li>Video Editing Tools Comparison</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 24/day24_slides.html" class="material-link">Interactive Slides</a>
+                    <a href="student-gallery.html" class="material-link secondary">Student Games</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
