--- a/day 24/day24_slides.html
+++ b/day 24/day24_slides.html
@@ -551,9 +551,9 @@
                     <span class="student-name">Gao, Xiaobo</span>
                     <a href="https://hydregenperoxide.github.io/114514/" target="_blank">Play Game</a>
                 </div>
-                <div class="student-item incomplete">
+                <div class="student-item">
                     <span class="student-name">Huff, Peter</span>
-                    <span style="color: #856404; font-size: 0.9em;">Incomplete submission</span>
+                    <a href="https://turbodiamond3.github.io/silly.com/" target="_blank">Play Game</a>
                 </div>
                 <div class="student-item">
                     <span class="student-name">Huling, Pryce</span>
