--- a/student-gallery.html
+++ b/student-gallery.html
@@ -542,12 +542,12 @@
                     <div class="repo-name">114514</div>
                 </div>
 
-                <div class="game-card incomplete">
+                <div class="game-card">
                     <div class="game-emoji">💎</div>
                     <div class="game-student">Huff, Peter</div>
-                    <div class="game-title">Turbo Diamond</div>
-                    <p style="color: #856404; margin-top: 10px; font-size: 0.9em;">Submission incomplete</p>
-                    <div class="repo-name">turbodiamond3.github.io</div>
+                    <div class="game-title">Silly.com</div>
+                    <a href="https://turbodiamond3.github.io/silly.com/" target="_blank" class="play-button">Play Game</a>
+                    <div class="repo-name">silly.com</div>
                 </div>
 
                 <div class="game-card">
