--- a/index.html
+++ b/index.html
@@ -751,6 +751,27 @@
                     <a href="student-gallery.html" class="material-link secondary">Student Games</a>
                 </div>
             </div>
+
+            <!-- Day 25 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 25</div>
+                <h3 class="day-title">Cybersecurity Deep Dive</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Cybercrime Statistics & Impact</li>
+                        <li>Famous Hackers: Mitnick, MafiaBoy, Anonymous</li>
+                        <li>Types of Hackers: Black, White, Grey Hat</li>
+                        <li>OWASP Top 10 Vulnerabilities</li>
+                        <li>Cybersecurity Careers & Bug Bounties</li>
+                        <li>Hands-On Security Challenges</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 25/day25_slides.html" class="material-link">Interactive Slides</a>
+                    <a href="security-medium-2/" class="material-link secondary">NEW Challenge</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -1174,6 +1195,31 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Training Data</div>
                         <div class="vocab-definition">The collection of examples you use to teach a machine learning model what to recognize. Training data is like flashcards - if you want to learn Spanish, you need lots of example words and phrases. If you want AI to recognize your face, you need lots of pictures of your face from different angles. The more examples (and more varied) your training data is, the smarter your AI becomes. Bad training data = bad AI!</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-25">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-25')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 25: Cybersecurity Deep Dive
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">White Hat Hacker</div>
+                        <div class="vocab-definition">An ethical hacker who uses their skills for good. Companies actually PAY white hat hackers to break into their systems and find security holes before criminals do. It's a real, high-paying career! Think of them as security guards who test the locks by trying to pick them.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Black Hat Hacker</div>
+                        <div class="vocab-definition">A criminal hacker who breaks into systems illegally for personal gain, to steal data, or cause damage. These are the "bad guys" you hear about in the news - they're the reason we need cybersecurity in the first place!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">IDOR (Insecure Direct Object Reference)</div>
+                        <div class="vocab-definition">A security vulnerability where you can access someone else's data by simply changing a number in the URL. Example: If your profile is at website.com/user/123, what happens if you change it to website.com/user/124? If you can see someone else's private info, that's an IDOR vulnerability! It's one of the most common security bugs on the web.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Cookie (Browser Cookie)</div>
+                        <div class="vocab-definition">A small piece of data that websites store in your browser to remember things about you - like whether you're logged in, your shopping cart items, or your preferences. Cookies are how websites know it's still YOU between page loads. However, if cookies aren't protected properly, hackers can modify them to pretend to be someone else or gain unauthorized access!</div>
                     </div>
                 </div>
             </div>
