--- a/index.html
+++ b/index.html
@@ -772,6 +772,28 @@
                     <a href="security-medium-2/" class="material-link secondary">NEW Challenge</a>
                 </div>
             </div>
+
+            <!-- Day 26 -->
+            <div class="day-card completed">
+                <div class="day-number">Day 26</div>
+                <h3 class="day-title">Semester Wrap-Up & Your Future in Tech</h3>
+                <div class="day-topics">
+                    <ul>
+                        <li>Security Review: Access Control & Injection</li>
+                        <li>Semester Overview - All We've Learned</li>
+                        <li>Tech Career Paths & Salaries</li>
+                        <li>Utah Schools: BYU, UVU, U of U</li>
+                        <li>Entrepreneurship - Start Now!</li>
+                        <li>Free Learning Resources</li>
+                    </ul>
+                </div>
+                <div class="materials-section">
+                    <p class="materials-title">Materials:</p>
+                    <a href="day 26/day26_slides.html" class="material-link">Interactive Slides</a>
+                    <a href="day 26/access-control-demo.html" class="material-link secondary">Access Control Demo</a>
+                    <a href="day 26/injection-demo.html" class="material-link secondary">Injection Demo</a>
+                </div>
+            </div>
         </div>
 
         <div class="vocabulary">
@@ -1220,6 +1242,31 @@
                     <div class="vocab-term-item">
                         <div class="vocab-term">Cookie (Browser Cookie)</div>
                         <div class="vocab-definition">A small piece of data that websites store in your browser to remember things about you - like whether you're logged in, your shopping cart items, or your preferences. Cookies are how websites know it's still YOU between page loads. However, if cookies aren't protected properly, hackers can modify them to pretend to be someone else or gain unauthorized access!</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vocab-day collapsed" id="vocab-day-26">
+                <div class="vocab-day-title" onclick="toggleVocab('vocab-day-26')">
+                    <span class="vocab-toggle">▼</span>
+                    Day 26: Semester Wrap-Up
+                </div>
+                <div class="vocab-content">
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Access Control</div>
+                        <div class="vocab-definition">Security measures that ensure users can only access resources and data they're authorized to see. When access control fails, users might be able to view other people's private information, modify data they shouldn't, or perform actions beyond their permission level. Broken access control is the #1 web vulnerability according to OWASP!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">SQL Injection</div>
+                        <div class="vocab-definition">A type of attack where hackers insert malicious database commands (SQL code) into input fields like login forms. If the website doesn't properly validate input, it might accidentally run the attacker's code - potentially exposing all user data, bypassing login security, or even deleting entire databases! Prevention: use parameterized queries that treat user input as data, never as commands.</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Silicon Slopes</div>
+                        <div class="vocab-definition">The nickname for Utah's thriving tech industry, concentrated along the Wasatch Front from Salt Lake City to Provo. Home to companies like Qualtrics, Domo, Pluralsight, Podium, and many startups. Utah is one of the fastest-growing tech hubs in the United States - you don't have to move to Silicon Valley!</div>
+                    </div>
+                    <div class="vocab-term-item">
+                        <div class="vocab-term">Self-Taught Developer</div>
+                        <div class="vocab-definition">Someone who learns programming and tech skills primarily through their own study rather than formal education. Many successful developers are self-taught using free resources like freeCodeCamp, YouTube, The Odin Project, and documentation. Companies like Google, Apple, and IBM have removed degree requirements for many positions - skills matter more than diplomas!</div>
                     </div>
                 </div>
             </div>
